WebCore/platform/graphics/ContextShadow.h
@@ -66,7 +66,7 @@ public:
     } m_type;
 
     Color m_color;
-    int m_blurRadius;
+    int m_blurDistance;
     FloatSize m_offset;
 
     ContextShadow();
